[gd_scene load_steps=2 format=3 uid="uid://1y2bwbihx4v1"]

[ext_resource type="Script" uid="uid://8jhqb2ulin61" path="res://CharacterMenu.gd" id="1_o4x1j"]

[node name="CharacterMenu" type="VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
script = ExtResource("1_o4x1j")

[node name="CharacterLabel" type="Label" parent="."]
layout_mode = 2
text = "name"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CooldownBar" type="ProgressBar" parent="."]
layout_mode = 2
show_percentage = false
